# Geoguessr-dashboard

./: .gitignore  LICENSE  README.md  cleanup_anomalous_games.py  fetch_games.py  main.py  process_stats.py  pyproject.toml  queries.js  test.html
.github/workflows/: ci.yml
backend/: __init__.py
backend/routes/: stats.py
backend/services/: stats_service.py
geodash/: __init__.py  config.py  model.py
geodash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geodash/api/: stats.py
geodash/static/css/: style.css
geodash/templates/: about.html  base.html  country.html  fetch.html  home.html  stats.html
geodash/views/: index.py
geoguessr/: fetch_games.py  find_anomalous_games.py  process_stats.py  queries.js  utils.py
sql/: data.sql  schema.sql
tests/: __init__.py  test_process_stats.py  test_stats_endpoint.py  test_utils.py
var/: geodash.sqlite3
