[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geodash"
version = "0.1.0"
description = "GeoGuessr Statistics Dashboard"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "requests",
    "reverse_geocoder",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pycodestyle",
    "pydocstyle",
]

[tool.setuptools.packages.find]
include = ["geodash*", "geoguessr*"]
